2008-10-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* auxbuf.h (tino_auxbufOn): Bugfix, I got wrong the call to
	tino_realloc0obO().  Apparently the latter function has a too
	complex and confusing parameter set (as I mixed it myself).  Shall
	redesign that sometimes.

2008-10-20  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alloc.h (TINO_ALLOC_ALIGN_PAGE, tino_alloc_align_size): added

2008-10-19  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_max, tino_scale_buf, tino_scale_ret)
	(tino_scale_seconds, tino_scale_bytes, tino_scale_throughput):
	added

	* auxbuf.h (tino_auxbufOn): commented

2008-10-16  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* err.h (TINO_ERR): changed to only take one string parameter
	 (TINO_ERR0): etc., macros changed for TINO_ERR()
	 (tino_err_new, tino_verr_new): renamed for better compatibility

2008-10-12  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* alloc.h (tino_alloc_alignedO): added

	* err.h (tino_verr): extended for other types than ExxxNNNc

2008-10-03  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* file.h (tino_file_openE, tino_file_open_createE)
	(tino_file_create_truncateE): O_LARGEFILE added, just to be safe

2008-09-28  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* data.h (tino_data_syncA, tino_data_file_syncA): added

	* getopt.h (tino_getopt_var_set_arg_imp): added single suffixes
	'd'eka [10], 'h'ecto [100], 'S'ector [512], 'C'D-Size [4096] and
	dual 'P/p'eta [2^50,10^15], 'E/e'xa [2^60,10^18], 'Z/z'etta
	[2^70,10^21] and 'Y/y'otta [2^80,10^24]
	(tino_getopt_var_set_arg_imp): Overflow detection corrected

2008-09-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile-tar.sh (exists): GAT fixes

	* Makefile (diff): GAT fixes

2008-09-21  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alarm.h (tino_alarm_run): watchdog now bites, too, when alarm
	processing takes too long.
	(tino_alarm_run, tino_alarm_stop, tino_alarm_set): Reentrancy and